[package]
name = "eth-validator-key"
version = "0.1.0"
edition = "2021"
authors = ["Devorso"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethsign = "0.9.0"
reth = "0.1.0"
serde = "1.0.194"
serde_json = "1.0.111"
signature = { version = "2.2.0", features = [] }
num = { version = "0.4.1", features = [] }

